[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Guns/Hold/W_19-Rail_Gun_Hold.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Guns/W_19_Rail_Gun.png" type="Texture" id=3]
[ext_resource path="res://Sprites/FX/FX-19-Laser_Beam.png" type="Texture" id=5]
[ext_resource path="res://Sprites/FX/FX-23-plasma-cloud.png" type="Texture" id=6]
[ext_resource path="res://Sprites/FX/FX-19-Laser_Beam_End.png" type="Texture" id=7]

[sub_resource type="Curve" id=1]
max_value = 2.0
_data = [ Vector2( 0.0208333, 0.993182 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1.28409 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[sub_resource type="Animation" id=3]
resource_name = "ChargeUp"
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite/Beam:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Chargedown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Gun_Sprite/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite/Beam:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -2 ), Vector2( 11, -3 ), Vector2( 12, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, -85.0, -45.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 2.0
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -2 ), Vector2( 11, -2 ), Vector2( 12, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Gun_Sprite/Sprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("POS_Gun/Melee_Area/CollisionShape2D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("POS_Gun/Gun_Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("POS_Gun/Gun_Sprite/Beam:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun/Gun_Sprite/Beam_End/Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.025, 1.975 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("POS_Gun/Gun_Sprite/Sprite:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("POS_Gun/Gun_Sprite/CPUParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.275, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="W_19-Rail_Gun_Hold" type="Node2D"]
script = ExtResource( 1 )

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Melee_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="POS_Gun" type="Node2D" parent="."]

[node name="Gun_Sprite" type="Sprite" parent="POS_Gun"]
position = Vector2( 12, -2 )
texture = ExtResource( 3 )
offset = Vector2( 0, 2 )
hframes = 5

[node name="Sprite" type="Sprite" parent="POS_Gun/Gun_Sprite"]
modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
texture = ExtResource( 3 )
offset = Vector2( 0, 2 )
hframes = 5

[node name="Beam" type="Sprite" parent="POS_Gun/Gun_Sprite"]
visible = false
self_modulate = Color( 1, 0, 0, 0.294118 )
show_behind_parent = true
position = Vector2( -1, 0 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0, -2 )
region_enabled = true
region_rect = Rect2( 1, 0.13, 1920, 4 )

[node name="Beam_End" type="Position2D" parent="POS_Gun/Gun_Sprite"]
visible = false

[node name="Sprite" type="Sprite" parent="POS_Gun/Gun_Sprite/Beam_End"]
visible = false
self_modulate = Color( 1, 0, 0, 0.521569 )
texture = ExtResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="POS_Gun/Gun_Sprite"]
position = Vector2( 8, 0 )
emitting = false
amount = 1
lifetime = 2.0
local_coords = false
texture = ExtResource( 6 )
gravity = Vector2( -5, -10 )
scale_amount_curve = SubResource( 1 )
color = Color( 1, 0, 0, 0.376471 )

[node name="POS" type="Node2D" parent="POS_Gun"]
visible = false

[node name="Shell" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 11, -4 )

[node name="Shoot" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 51, -3 )

[node name="Throw" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 45, -3 )

[node name="Raycast" type="Node2D" parent="POS_Gun"]

[node name="Shoot" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 8, -2 )
enabled = true
cast_to = Vector2( 2000, 0 )
collision_mask = 3594

[node name="Melee" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2050

[node name="Throw" type="RayCast2D" parent="POS_Gun/Raycast"]
visible = false
position = Vector2( 7, -1 )
enabled = true
cast_to = Vector2( 35, 0 )
collision_mask = 2570

[node name="Melee_Area" type="Area2D" parent="POS_Gun"]
visible = false
collision_layer = 262144
collision_mask = 2562

[node name="CollisionShape2D" type="CollisionShape2D" parent="POS_Gun/Melee_Area"]
position = Vector2( 14, 0 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChargeUp = SubResource( 3 )
anims/Chargedown = SubResource( 4 )
anims/Click = SubResource( 5 )
anims/Melee = SubResource( 6 )
anims/Shoot = SubResource( 7 )

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
[connection signal="timeout" from="Melee_Timer" to="." method="_on_Melee_Timer_timeout"]
[connection signal="body_entered" from="POS_Gun/Melee_Area" to="." method="_on_Melee_Area_body_entered"]
